# Air-Quality-LSTM

./: .gitignore  Dockerfile  Dockerfile.mlflow  Dockerfile.model  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
src/base_models/: base_models.py
src/datasets/: weather_dataset.py
src/exploration/: exploration.ipynb
src/model/: early_stopper.py  model_tuning.py  weather_model.py
src/model_class/: early_stopper.py  model_tuning.py  weather_model.py
src/transformers/: time_transformer.py
src/utils/: db_utils.py  init_logger.py  mlflow_manager.py  utils.py
