[project]
name = "torch-weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "scikit-learn==1.6.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.41",
    "torch==2.2.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
