[project]
name = "torch-weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "scikit-learn==1.6.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.41",
    "torch==2.2.2",
    "numpy<2",
    "tqdm>=4.67.1",
    "optuna>=4.3.0",
    "mlflow==3.1.0",
    "boto3>=1.38.37",
    "fastapi>=0.115.13",
    "uvicorn>=0.34.3",
    "asyncio>=3.4.3",
    "pydantic>=2.11.7",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
